<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <io.legado.app.lib.prefs.PreferenceCategory
        android:title="@string/aloud_config"
        app:allowDividerAbove="false"
        app:allowDividerBelow="false"
        app:iconSpaceReserved="false">

        <io.legado.app.lib.prefs.SwitchPreference
            android:defaultValue="false"
            android:key="ignoreAudioFocus"
            android:summary="@string/ignore_audio_focus_summary"
            android:title="@string/ignore_audio_focus_title" />

        <io.legado.app.lib.prefs.SwitchPreference
            android:defaultValue="false"
            android:key="pauseReadAloudWhilePhoneCalls"
            android:summary="@string/pause_read_aloud_while_phone_calls_summary"
            android:title="@string/pause_read_aloud_while_phone_calls_title" />

        <io.legado.app.lib.prefs.SwitchPreference
            android:defaultValue="false"
            android:title="@string/read_aloud_wake_lock"
            android:summary="@string/read_aloud_wake_lock_summary"
            android:key="readAloudWakeLock"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.SwitchPreference
            android:defaultValue="false"
            android:title="@string/pref_media_button_per_next"
            android:summary="@string/pref_media_button_per_next_summary"
            android:key="mediaButtonPerNext"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.SwitchPreference
            android:defaultValue="false"
            android:title="@string/read_aloud_by_page"
            android:summary="@string/read_aloud_by_page_summary"
            android:key="readAloudByPage"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.SwitchPreference
            android:defaultValue="false"
            android:title="@string/stream_read_aloud_audio"
            android:summary="@string/stream_read_aloud_audio_summary"
            android:key="streamReadAloudAudio"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.SwitchPreference
            android:defaultValue="true"
            android:key="readAloudCoverRotation"
            android:summary="@string/read_aloud_cover_rotation_summary"
            android:title="@string/read_aloud_cover_rotation"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.Preference
            android:defaultValue="10000"
            android:dependency="readAloudCoverRotation"
            android:key="readAloudCoverRotationDuration"
            android:summary="@string/read_aloud_cover_rotation_duration_summary"
            android:title="@string/read_aloud_cover_rotation_duration"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.Preference
            android:defaultValue="3000"
            android:key="readAloudScrollFollowTimeout"
            android:summary="@string/read_aloud_scroll_follow_timeout_summary"
            android:title="@string/read_aloud_scroll_follow_timeout_title"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.Preference
            android:defaultValue="500"
            android:key="readAloudProgressPollInterval"
            android:summary="@string/read_aloud_progress_poll_interval_summary"
            android:title="@string/read_aloud_progress_poll_interval_title"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.SwitchPreference
            android:defaultValue="true"
            android:key="readAloudHideFloatingWindow"
            android:summary="@string/read_aloud_hide_floating_window_summary"
            android:title="@string/read_aloud_hide_floating_window"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.SwitchPreference
            android:defaultValue="false"
            android:key="readAloudHidePlaybackPanel"
            android:summary="@string/read_aloud_hide_playback_panel_summary"
            android:title="@string/read_aloud_hide_playback_panel"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.Preference
            android:defaultValue="10"
            android:key="readAloudPlaybackPanelDuration"
            android:summary="@string/read_aloud_playback_panel_duration_summary"
            android:title="@string/read_aloud_playback_panel_duration"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.SwitchPreference
            android:defaultValue="false"
            android:key="readAloudHidePagePanel"
            android:summary="@string/read_aloud_hide_page_panel_summary"
            android:title="@string/read_aloud_hide_page_panel"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.SwitchPreference
            android:defaultValue="true"
            android:key="readAloudPanelOnPageFooter"
            android:summary="@string/read_aloud_panel_on_page_footer_summary"
            android:title="@string/read_aloud_panel_on_page_footer"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.SwitchPreference
            android:defaultValue="false"
            android:key="readAloudFloatOnDesktop"
            android:summary="@string/read_aloud_float_on_desktop_summary"
            android:title="@string/read_aloud_float_on_desktop"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.Preference
            android:title="@string/sys_tts_config"
            android:summary="@string/sys_tts_config_summary"
            android:key="sysTtsConfig"
            app:iconSpaceReserved="false" />

    </io.legado.app.lib.prefs.PreferenceCategory>

</androidx.preference.PreferenceScreen>
